--- a/app/views/agents/show.html.erb
+++ b/app/views/agents/show.html.erb
@@ -101,7 +101,7 @@
               </p>
 
               <!-- Agentparam einbinden -->
-              <p><strong> exposure to hazard</strong></p>
+              <p><strong> exposure to hazard: </strong></p>
               <% @agent.agentparams.order(:infected_species).each do |p| %>
                 <ul>
                   <li>
