--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,11 +13,11 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="link"><%= link_to image_tag("spiced_logo.png", alt: "Spiced-DB"),root_path%></li>
-        <li class="link"><%= link_to "Insert Data", home_insertdata_path, :class => "navbar-brand" %></li>
-        <li class="link"><%= link_to "Show Data", home_showdata_path, :class => "navbar-brand" %></li>
-        <li class="link"><%= link_to "Informations", home_informations_path, :class => "navbar-brand" %></li>        
-        <li class="link"><%= link_to "Help", home_help_path, :class => "navbar-brand" %></li> 
-        <li class="link"><%= link_to "Admin-Area",  home_admin_path , :class => "navbar-brand" %></li> 
+        <li class="link"><%= link_to "Insert Data", home_insertdata_path %></li>
+        <li class="link"><%= link_to "Show Data", home_showdata_path %></li>
+        <li class="link"><%= link_to "Informations", home_informations_path %></li>        
+        <li class="link"><%= link_to "Help", home_help_path %></li> 
+        <li class="link"><%= link_to "Admin-Area",  home_admin_path %></li> 
         <li class="link"><%= link_to "Discussions", home_discussions_path %></li>
       </ul>
     </div>
