--- a/app/views/spikingparams/_form.html.erb
+++ b/app/views/spikingparams/_form.html.erb
@@ -47,6 +47,10 @@
     <%= f.label :spik_comment %><br>
     <%= f.text_area :spik_comment %>
   </div>
+  <div class="field">
+    <%= f.label :spiking_id %><br>
+    <%= f.text_area :spiking_id %>
+  </div> 
   <div class="actions">
     <%= f.submit %>
   </div>
