--- a/app/views/tenacities/_form.html.erb
+++ b/app/views/tenacities/_form.html.erb
@@ -28,6 +28,10 @@
     <%= f.label :i_concentration_unit %><br>
     <%= f.text_field :i_concentration_unit %>
   </div>
+
+  <%= f.fields_for :tenacityparams do |builder| %>
+    <%= render 'tenacityparam_fields', f: builder %>
+  <% end %>
   <div class="field">
     <%= f.label :reference_id %><br>
     <%= f.select :reference_id, Reference.all.order(:first_author_name, :year).collect {|c| [ c.full_ref, c.id ] }, { :include_blank => true, :selected => @tenacity.reference_id}, class: "form-control" %>
