--- a/app/views/spikings/_tablespikings.html.erb
+++ b/app/views/spikings/_tablespikings.html.erb
@@ -8,6 +8,15 @@
 	      <th>Spiking device needed</th>
 	      <th>Pros</th>
 	      <th>Cons</th>
+	      <th>Spik weight of sample</th>
+	      <th>Spik weight of sample unit</th>
+	      <th>Cfu of inoculum per ml</th>
+	      <th>Cfu per gram spice spiked</th>
+	      <th>Carrier substance</th>
+	      <th>Carrier fluid</th>
+	      <th>Spik duration</th>
+	      <th>Spik duration unit</th>
+	      <th>Spik comment</th>
 	      <th>Reference</th>
 	      <th>User</th>
 	      <th></th>
@@ -24,6 +33,70 @@
 	        <td><%= spiking.spik_device_needed %></td>
 	        <td><%= spiking.pros %></td>
 	        <td><%= spiking.cons %></td>
+	        <td>
+	        	<% spiking.spikingparams.each do |p| %>
+	            <ul>
+	              <li><%= p.spik_weight_of_sample  if p.spik_weight_of_sample  %></li>
+	            </ul>
+            <% end %>            
+	        </td>
+	        <td>
+	        	<% spiking.spikingparams.each do |p| %>
+	            <ul>
+	              <li><%= p.spik_weight_of_sample_unit  if p.spik_weight_of_sample_unit  %></li>
+	            </ul>
+            <% end %>            
+	        </td>
+	        <td>
+	        	<% spiking.spikingparams.each do |p| %>
+	            <ul>
+	              <li><%= p.cfu_of_inoculum_per_ml  if p.cfu_of_inoculum_per_ml  %></li>
+	            </ul>
+            <% end %>            
+	        </td>
+	        <td>
+	        	<% spiking.spikingparams.each do |p| %>
+	            <ul>
+	              <li><%= p.cfu_per_gram_spice_spiked  if p.cfu_per_gram_spice_spiked  %></li>
+	            </ul>
+            <% end %>            
+	        </td>
+	        <td>
+	        	<% spiking.spikingparams.each do |p| %>
+	            <ul>
+	              <li><%= p.carrier_substance  if p.carrier_substance  %></li>
+	            </ul>
+            <% end %>            
+	        </td>
+	        <td>
+	        	<% spiking.spikingparams.each do |p| %>
+	            <ul>
+	              <li><%= p.carrier_fluid  if p.carrier_fluid  %></li>
+	            </ul>
+            <% end %>            
+	        </td>
+	        <td>
+	        	<% spiking.spikingparams.each do |p| %>
+	            <ul>
+	              <li><%= p.spik_duration  if p.spik_duration  %></li>
+	            </ul>
+            <% end %>            
+	        </td>
+	        <td>
+	        	<% spiking.spikingparams.each do |p| %>
+	            <ul>
+	              <li><%= p.spik_duration_unit  if p.spik_duration_unit  %></li>
+	            </ul>
+            <% end %>            
+	        </td>
+	        <td>
+	        	<% spiking.spikingparams.each do |p| %>
+	            <ul>
+	              <li><%= p.spik_comment  if p.spik_comment  %></li>
+	            </ul>
+            <% end %>            
+	        </td>	        
+
 	        <td><%= spiking.reference_id %></td>
 	        <td><%= spiking.user_id %></td>
 	        <td><%= link_to 'Show', spiking, class: "btn btn-info btn-sm" %></td>
