--- a/app/views/agents/index.html.erb
+++ b/app/views/agents/index.html.erb
@@ -15,6 +15,9 @@
       </div>     
 
       <div class="col-md-9" id="rightCol"> 
+        <%= link_to 'Export XLS', url_for(:format => 'xls') %>
+        <%= link_to 'Export CSV', url_for(:format => 'csv') %>
+
         <%= render 'tableagents' %> <br>
         <%= link_to 'New Agent', new_agent_path, class: "btn btn-success " %>
       </div>
