--- a/app/views/agents/show.html.erb
+++ b/app/views/agents/show.html.erb
@@ -124,6 +124,7 @@
           <%= link_to 'Edit Agent', edit_agent_path(@agent), class: "btn btn-warning btn-sm" %> |  | 
           <%= link_to 'Delete', @agent, class: "btn btn-danger btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %> | 
           <%= link_to 'Back to all Agents', agents_path, class: "btn btn-info btn-sm" %>   
+          <%= link_to "Duplicate", :action => "clone" %>
         </div>
       </div>
 
