--- a/app/views/agents/show.html.erb
+++ b/app/views/agents/show.html.erb
@@ -121,10 +121,17 @@
 
             </div>
           </div>    
-          <%= link_to 'Edit Agent', edit_agent_path(@agent), class: "btn btn-warning btn-sm" %> |  | 
+          <%= link_to 'Edit Agent', edit_agent_path(@agent), class: "btn btn-warning btn-sm" %> | 
+
+          <% if params[:clone] == "attributes" %>
+            Title
+          <% else %>
+            <%= link_to "Duplicate", agent_path(clone: "attributes"), class: "btn btn-success btn-sm"  %>
+          <% end %> | 
+
           <%= link_to 'Delete', @agent, class: "btn btn-danger btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %> | 
           <%= link_to 'Back to all Agents', agents_path, class: "btn btn-info btn-sm" %>   
-          <%= link_to "Duplicate", :action => "clone" %>
+
         </div>
       </div>
 
