--- a/app/views/contaminationstatuses/show.html.erb
+++ b/app/views/contaminationstatuses/show.html.erb
@@ -83,7 +83,15 @@
 
             </div>
           </div>    
-              <%= link_to 'Edit', edit_contaminationstatus_path(@contaminationstatus), class: "btn btn-warning btn-sm" %> |  | 
+              <%= link_to 'Edit', edit_contaminationstatus_path(@contaminationstatus), class: "btn btn-warning btn-sm" %> | 
+
+              <% if params[:clone] == "attributes" %>
+                Title
+              <% else %>
+                <%= link_to "Duplicate", contaminationstatus_path(clone: "attributes"), class: "btn btn-success btn-sm"  %>
+              <% end %>  |
+
+
               <%= link_to 'Delete', @contaminationstatus, class: "btn btn-danger btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %> | 
               <%= link_to 'Back to all Contamination Status', contaminationstatuses_path, class: "btn btn-info btn-sm" %> 
         </div>
