--- a/app/views/agents/_form.html.erb
+++ b/app/views/agents/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@agent) do |f| %>
+<%= nested_form_for(@agent) do |f| %>
   <% if @agent.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@agent.errors.count, "error") %> prohibited this agent from being saved:</h2>
@@ -19,6 +19,7 @@
       <%= f.fields_for :agentparams do |builder| %>
         <%= render 'agentparam_fields', f: builder %>
       <% end %>
+      <p><%= f.link_to_add "Add more exposure to hazard attribute fields.", :agentparams, class: "btn btn-success btn-sm" %></p>
     </div>
   </div>
   <div class="actions">
