--- a/app/views/spikings/_spikingparam_fields.html.erb
+++ b/app/views/spikings/_spikingparam_fields.html.erb
@@ -1,6 +1,5 @@
   <div class="form-group">
-    <%= f.check_box :_destroy %>
-    <%= f.label :_destroy, "Remove these Spiking parameter fields." %>
+    <%= f.link_to_remove "Remove these Spiking parameter fields.", class: "btn btn-danger btn-sm" %>
   </div>  
   <div class="field">
     <%= f.label :spik_weight_of_sample %><br>
