--- a/app/views/tenacities/_tenacityparam_fields.html.erb
+++ b/app/views/tenacities/_tenacityparam_fields.html.erb
@@ -1,6 +1,5 @@
   <div class="form-group">
-    <%= f.check_box :_destroy %>
-    <%= f.label :_destroy, "Remove these Tenacity parameter fields." %>
+    <%= f.link_to_remove "Remove these Tenacity parameter fields.", class: "btn btn-danger btn-sm" %>
   </div>
   <div class="field">
     <%= f.label :tena_duration %><br>
